--- a/prix.html
+++ b/prix.html
@@ -143,10 +143,10 @@
                 </td>
                 <td class="p-0">
                   <div class="sheet-cuentas">
-                    <div>—</div>
-                    <div>—</div>
-                    <div>—</div>
-                    <div>—</div>
+                    <div>-Antonio</div>
+                    <div>Dreak Yong</div>
+                    <div>JesusHopeprs</div>
+                    <div>#Mallely</div>
                   </div>
                 </td>
               </tr>
