--- a/prix.html
+++ b/prix.html
@@ -93,6 +93,7 @@
                 <th>3</th>
                 <th>4</th>
                 <th>5</th>
+                <th>6</th>
               </tr>
             </thead>
             <tbody>
@@ -104,6 +105,7 @@
                 <th>Chino</th>
                 <th>Benja</th>
                 <th>Observador</th>
+                <th>Stone</th>
               </tr>
 
               <!-- CUENTAS  -->
@@ -114,7 +116,7 @@
                     <div>Explosive</div>
                     <div>l=APOCALIPSIS=l</div>
                     <div>SexyPersefone</div>
-                    <div>ReinaDelSvr</div>
+                    <div>Jeque Jesus</div>
                   </div>
                 </td>
                 <td class="p-0">
@@ -146,7 +148,15 @@
                     <div>-Antonio</div>
                     <div>Dreak Yong</div>
                     <div>JesusHopeprs</div>
-                    <div>#Mallely</div>
+                    <div>Stone</div>
+                  </div>
+                </td>
+                <td class="p-0">
+                  <div class="sheet-cuentas">
+                    <div>Viaviana Canales</div>
+                    <div>Jesus Hoppers</div>
+                    <div>PatronBiker</div>
+                    <div>Viaviana Ca</div>
                   </div>
                 </td>
               </tr>
@@ -159,8 +169,10 @@
                 <th class="win">0</th>
                 <th class="win">0</th>
                 <th class="win">0</th>
+                 <th class="win">0</th>
               </tr>
               <tr class="sheet-block">
+                <th class="lose">0</th>
                 <th class="lose">0</th>
                 <th class="lose">0</th>
                 <th class="lose">0</th>
@@ -176,8 +188,10 @@
                 <th class="win">0</th>
                 <th class="win">0</th>
                 <th class="win">0</th>
+                <th class="win">0</th>
               </tr>
               <tr class="sheet-block">
+                <th class="lose">0</th>
                 <th class="lose">0</th>
                 <th class="lose">0</th>
                 <th class="lose">0</th>
@@ -193,19 +207,20 @@
                 <th></th>
                 <th></th>
                 <th></th>
+                <th></th>
               </tr>
 
               <!-- TOTAL  -->
               <tr class="sheet-total strong">
                 <th></th>
-                <th class="text-end" colspan="4">TOTAL</th>
+                <th class="text-end" colspan="5">TOTAL</th>
                 <th class="total-num"></th>
               </tr>
 
               <!-- PUNTOS  -->
               <tr class="sheet-total strong">
                 <th></th>
-                <th class="text-end" colspan="4">PUNTOS</th>
+                <th class="text-end" colspan="5">PUNTOS</th>
                 <th
                   style="
                     font-size: 1.25rem;
