--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <span class="badge bg-success bg-opacity-25 mb-2 border border-success border-opacity-25">Temporada Actual</span>
               <h2 class="h3 fw-extrabold m-0">GUILD PRIX — 2026</h2>
               <p class="mb-0 mt-1" style="color: rgba(255, 255, 255, 0.7);">
-                <i class="bi bi-calendar-event me-1"></i>En progreso
+                <i class="bi bi-calendar-check me-1"></i>Finalizado
               </p>
             </div>
             <span class="badge text-bg-warning text-dark px-3 py-2 mt-2 mt-md-0 border border-warning">
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-6">
               <div class="ps-md-4">
-                <h3 class="h2 fw-bold mb-3">GuildPrix <span class="text-primary">Top #___</span></h3>
+                <h3 class="h2 fw-bold mb-3">GuildPrix <span class="text-primary">Top #4</span></h3>
                 <div class="d-flex align-items-center mb-4">
                   <div class="flex-shrink-0">
                     <div class="avatar-sm bg-primary bg-opacity-25 rounded-circle d-flex align-items-center justify-content-center border border-primary border-opacity-25">
