--- a/live.html
+++ b/live.html
@@ -74,74 +74,75 @@
 
     <main class="container py-5">
       <!-- ===================== -->
-<!-- TRANSMISIÓN EN VIVO -->
-<!-- ===================== -->
-<div class="glassy p-4 p-md-5 rounded-4 mb-5">
-  <div class="d-flex align-items-center justify-content-between mb-4">
-    <div>
-      <h1 class="h3 fw-extrabold m-0 neon">
-        <i class="bi bi-broadcast-pin me-2"></i>Transmisión en VIVO
-      </h1>
-      <p class="text-muted mb-0 mt-1">
-        Streaming en directo — Carlos en Guild Prix 2026
-      </p>
-    </div>
-    <span class="badge bg-danger bg-opacity-25 px-3 py-2">
-      <i class="bi bi-circle-fill me-1" style="font-size: 0.6rem"></i>EN VIVO
-    </span>
-  </div>
+      <!-- TRANSMISIÓN GRABADA -->
+      <!-- ===================== -->
+      <div class="glassy p-4 p-md-5 rounded-4 mb-5">
+        <div class="d-flex align-items-center justify-content-between mb-4">
+          <div>
+            <h1 class="h3 fw-extrabold m-0 neon">
+              <i class="bi bi-record-circle me-2"></i>Transmisión Grabada
+            </h1>
+            <p class="text-muted mb-0 mt-1">
+              Sesión en vivo — Carlos en Guild Prix 2026
+            </p>
+          </div>
+          <span class="badge bg-info bg-opacity-25 px-3 py-2">
+            <i class="bi bi-clock-history me-1"></i>Transmisión Finalizada
+          </span>
+        </div>
 
-  <!-- Transmisión en vivo actual -->
-  <div
-    class="ratio ratio-16x9 rounded-3 overflow-hidden border border-danger border-opacity-50"
-  >
-    <iframe
-      src="https://www.youtube.com/embed/NkAYFlu4ncw?autoplay=1&mute=1&playsinline=1&rel=0&modestbranding=1"
-      title="YouTube Live - Transmisión en vivo Guild Prix 2026"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen
-      loading="lazy"
-      referrerpolicy="strict-origin-when-cross-origin"
-    >
-    </iframe>
-  </div>
+        <!-- Video de transmisión grabada -->
+        <div
+          class="ratio ratio-16x9 rounded-3 overflow-hidden border border-info border-opacity-25"
+        >
+          <iframe
+            src="https://www.youtube.com/embed/NkAYFlu4ncw?playsinline=1&rel=0&modestbranding=1"
+            title="YouTube Video - Transmisión Grabada Guild Prix 2026"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+            loading="lazy"
+            referrerpolicy="strict-origin-when-cross-origin"
+          >
+          </iframe>
+        </div>
 
-  <div class="mt-4">
-    <div class="row">
-      <div class="col-md-8">
-        <h5 class="fw-bold mb-2">
-          <i class="bi bi-info-circle me-2"></i>Información de la transmisión
-        </h5>
-        <p class="text-muted mb-0">
-          Transmisión en vivo directa desde el Guild Prix 2026. Sigue a Chino
-          y su equipo en tiempo real mientras compiten contra los mejores
-          jugadores en este torneo de élite. Disfruta del streaming.
-        </p>
-      </div>
-      <div class="col-md-4">
-        <div class="glassy p-3 rounded-3">
-          <div class="d-flex justify-content-between mb-2">
-            <span class="text-muted">Evento:</span>
-            <span class="fw-bold">Guild Prix 2026</span>
-          </div>
-          <div class="d-flex justify-content-between mb-2">
-            <span class="text-muted">Formato:</span>
-            <span class="fw-bold">Torneo en vivo</span>
-          </div>
-          <div class="d-flex justify-content-between mb-2">
-            <span class="text-muted">Duración:</span>
-            <span class="fw-bold">En directo</span>
-          </div>
-          <div class="d-flex justify-content-between">
-            <span class="text-muted">Estado:</span>
-            <span class="badge bg-danger">Transmitiendo</span>
+        <div class="mt-4">
+          <div class="row">
+            <div class="col-md-8">
+              <h5 class="fw-bold mb-2">
+                <i class="bi bi-info-circle me-2"></i>Información de la
+                transmisión
+              </h5>
+              <p class="text-muted mb-0">
+                Grabación de la transmisión en vivo del Guild Prix 2026. Revive
+                los mejores momentos de Carlos y su equipo compitiendo contra
+                los mejores jugadores en este torneo de élite. Incluye
+                comentarios, análisis y jugadas destacadas.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <div class="glassy p-3 rounded-3">
+                <div class="d-flex justify-content-between mb-2">
+                  <span class="text-muted">Evento:</span>
+                  <span class="fw-bold">Guild Prix 2026</span>
+                </div>
+                <div class="d-flex justify-content-between mb-2">
+                  <span class="text-muted">Fecha:</span>
+                  <span class="fw-bold">Transmisión Grabada</span>
+                </div>
+                <div class="d-flex justify-content-between mb-2">
+                  <span class="text-muted">Formato:</span>
+                  <span class="fw-bold">Torneo en vivo</span>
+                </div>
+                <div class="d-flex justify-content-between">
+                  <span class="text-muted">Estado:</span>
+                  <span class="badge bg-info">Grabación</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-
       <!-- ===================== -->
       <!-- TEMPORADA 2026 -->
       <!-- ===================== -->
