--- a/live.html
+++ b/live.html
@@ -73,34 +73,75 @@
     </nav>
 
     <main class="container py-5">
-      <!-- Video de transmisión grabada -->
-<div class="ratio ratio-16x9 rounded-3 overflow-hidden border border-info border-opacity-25">
-  <iframe
-    src="https://www.youtube-nocookie.com/embed/NkAYFlu4ncw?playsinline=1&rel=0&modestbranding=1"
-    title="YouTube Video - Transmisión Grabada Guild Prix 2026"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen
-    loading="lazy"
-    referrerpolicy="strict-origin-when-cross-origin"
-  ></iframe>
-</div>
+      <!-- ===================== -->
+<!-- TRANSMISIÓN GRABADA -->
+<!-- ===================== -->
+<div class="glassy p-4 p-md-5 rounded-4 mb-5">
+  <div class="d-flex align-items-center justify-content-between mb-4">
+    <div>
+      <h1 class="h3 fw-extrabold m-0 neon">
+        <i class="bi bi-record-circle me-2"></i>Transmisión Grabada
+      </h1>
+      <p class="text-muted mb-0 mt-1">
+        Sesión en vivo — Carlos en Guild Prix 2026
+      </p>
+    </div>
+    <span class="badge bg-info bg-opacity-25 px-3 py-2">
+      <i class="bi bi-clock-history me-1"></i>Transmisión Finalizada
+    </span>
+  </div>
 
-<!-- Fallback / CTA -->
-<div class="mt-3 d-flex gap-2 flex-wrap">
-  <a
-    class="btn btn-outline-info btn-sm"
-    href="https://www.youtube.com/watch?v=NkAYFlu4ncw"
-    target="_blank"
-    rel="noopener"
+  <!-- Video de transmisión grabada -->
+  <div
+    class="ratio ratio-16x9 rounded-3 overflow-hidden border border-info border-opacity-25"
   >
-    <i class="bi bi-box-arrow-up-right me-1"></i>Ver en YouTube
-  </a>
+    <iframe
+      src="https://www.youtube.com/embed/NkAYFlu4ncw?playsinline=1&rel=0&modestbranding=1"
+      title="YouTube Video - Transmisión Grabada Guild Prix 2026"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+      loading="lazy"
+      referrerpolicy="strict-origin-when-cross-origin"
+    >
+    </iframe>
+  </div>
 
-  <small class="text-muted align-self-center">
-    Si aparece “Video no disponible”, es una restricción de derechos que impide reproducirlo fuera de YouTube.
-  </small>
+  <div class="mt-4">
+    <div class="row">
+      <div class="col-md-8">
+        <h5 class="fw-bold mb-2">
+          <i class="bi bi-info-circle me-2"></i>Información de la transmisión
+        </h5>
+        <p class="text-muted mb-0">
+          Grabación de la transmisión en vivo del Guild Prix 2026. Revive los
+          mejores momentos de Carlos y su equipo compitiendo contra los
+          mejores jugadores en este torneo de élite. Incluye comentarios,
+          análisis y jugadas destacadas.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <div class="glassy p-3 rounded-3">
+          <div class="d-flex justify-content-between mb-2">
+            <span class="text-muted">Evento:</span>
+            <span class="fw-bold">Guild Prix 2026</span>
+          </div>
+          <div class="d-flex justify-content-between mb-2">
+            <span class="text-muted">Fecha:</span>
+            <span class="fw-bold">Transmisión Grabada</span>
+          </div>
+          <div class="d-flex justify-content-between mb-2">
+            <span class="text-muted">Formato:</span>
+            <span class="fw-bold">Torneo en vivo</span>
+          </div>
+          <div class="d-flex justify-content-between">
+            <span class="text-muted">Estado:</span>
+            <span class="badge bg-info">Grabación</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
       <!-- ===================== -->
       <!-- TEMPORADA 2026 -->
       <!-- ===================== -->
