--- a/live.html
+++ b/live.html
@@ -87,7 +87,7 @@
             </p>
           </div>
           <span class="badge bg-dark bg-opacity-50 px-3 py-2">
-            <i class="bi bi-clock-history me-1"></i>Completo 2h 30m
+            <i class="bi bi-clock-history me-1"></i>Completo 1h 22m
           </span>
         </div>
 
@@ -123,7 +123,7 @@
           <div class="col-auto">
             <div class="d-flex align-items-center text-muted">
               <i class="bi bi-clock me-2"></i>
-              <span>Duración: 2h 30m</span>
+              <span>Duración: 1h 22m</span>
             </div>
           </div>
           <div class="col-auto">
@@ -149,7 +149,7 @@
               <p class="text-muted mb-0">
                 Sesión completa del torneo Guild Prix 2026. Incluye comentarios
                 en tiempo real, análisis táctico y todas las jugadas destacadas
-                del equipo de Carlos durante la competencia.
+                del equipo de Chino durante la competencia.
               </p>
             </div>
             <div class="col-md-4">
