--- a/prix.html
+++ b/prix.html
@@ -140,7 +140,7 @@
                     <div>Bunny</div>
                     <div>Flancita </div>
                     <div>Esteban</div>
-                    <div>Shordi</div>
+                    <div>#Mallely ~</div>
                   </div>
                 </td>
                 <td class="p-0">
