--- a/prix.html
+++ b/prix.html
@@ -140,15 +140,15 @@
                     <div>Bunny</div>
                     <div>Flancita </div>
                     <div>Esteban</div>
-                    <div>#Mallely ~</div>
+                    <div>Shordi</div>
                   </div>
                 </td>
                 <td class="p-0">
                   <div class="sheet-cuentas">
-                    <div>-Antonio</div>
+                    <div>ANTONIO</div>
                     <div>Dreak Yong</div>
                     <div>JesusHopeprs</div>
-                    <div>ANTONIO</div>
+                    <div>#Mallely ~</div>
                   </div>
                 </td>
                 <td class="p-0">
