--- a/live.html
+++ b/live.html
@@ -74,99 +74,102 @@
 
     <main class="container py-5">
       <!-- ===================== -->
-      <!-- TRANSMISIÓN GRABADA - VERSIÓN MINIMALISTA -->
-      <!-- ===================== -->
-      <div class="glassy p-4 p-md-5 rounded-4 mb-5">
-        <div class="d-flex align-items-center justify-content-between mb-4">
-          <div>
-            <h1 class="h3 fw-extrabold m-0 neon">
-              <i class="bi bi-youtube me-2 text-danger"></i>Transmisión Grabada
-            </h1>
-            
-          </div>
-          <span class="badge bg-dark bg-opacity-50 px-3 py-2">
-            <i class="bi bi-clock-history me-1"></i>Completo 1h 22m
-          </span>
-        </div>
+<!-- TRANSMISIÓN GRABADA - VERSIÓN MINIMALISTA -->
+<!-- ===================== -->
+<div class="glassy p-4 p-md-5 rounded-4 mb-5">
+  <div class="d-flex align-items-center justify-content-between mb-4">
+    <div>
+      <h1 class="h3 fw-extrabold m-0 neon">
+        <i class="bi bi-youtube me-2 text-danger"></i>Transmisión Grabada
+      </h1>
+    </div>
+    <span class="badge bg-dark bg-opacity-50 px-3 py-2">
+      <i class="bi bi-clock-history me-1"></i>Completo 1h 22m
+    </span>
+  </div>
 
-        <!-- BOTÓN SUPER DESTACADO CENTRAL -->
-        <div class="text-center mb-4">
-          <a
-            href="https://www.youtube.com/watch?v=NkAYFlu4ncw"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="btn btn-danger btn-lg px-5 py-4 fw-bold d-inline-flex align-items-center"
-            style="
-              background: linear-gradient(135deg, #ff0000, #cc0000);
-              border: none;
-              border-radius: 15px;
-              box-shadow: 0 5px 20px rgba(255, 0, 0, 0.25);
-              transition: all 0.3s ease;
-              min-width: 280px;
-            "
-            onmouseover="this.style.transform='scale(1.03)'; this.style.boxShadow='0 8px 25px rgba(255, 0, 0, 0.35)';"
-            onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 5px 20px rgba(255, 0, 0, 0.25)';"
-          >
-            <i class="bi bi-play-circle-fill fs-2 me-3"></i>
-            <div class="text-start">
-              <div class="fw-bold fs-5">VER TRANSMISIÓN COMPLETA</div>
-              <small class="opacity-75">Haz clic para abrir en YouTube</small>
-            </div>
-            <i class="bi bi-arrow-up-right-circle fs-4 ms-3"></i>
-          </a>
+  <!-- BOTÓN SUPER DESTACADO CENTRAL - RESPONSIVE -->
+  <div class="text-center mb-4">
+    <div class="d-flex justify-content-center">
+      <a
+        href="https://www.youtube.com/watch?v=NkAYFlu4ncw"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="btn btn-danger btn-lg px-4 px-md-5 py-3 py-md-4 fw-bold d-flex align-items-center justify-content-center w-100 w-md-auto"
+        style="
+          background: linear-gradient(135deg, #ff0000, #cc0000);
+          border: none;
+          border-radius: 15px;
+          box-shadow: 0 5px 20px rgba(255, 0, 0, 0.25);
+          transition: all 0.3s ease;
+          max-width: 500px;
+        "
+        onmouseover="this.style.transform='scale(1.03)'; this.style.boxShadow='0 8px 25px rgba(255, 0, 0, 0.35)';"
+        onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 5px 20px rgba(255, 0, 0, 0.25)';"
+      >
+        <i class="bi bi-play-circle-fill fs-2 me-2 me-md-3"></i>
+        <div class="text-start flex-grow-1">
+          <div class="fw-bold fs-6 fs-md-5">VER TRANSMISIÓN COMPLETA</div>
+          <small class="opacity-75 d-none d-md-block">Haz clic para abrir en YouTube</small>
+          <small class="opacity-75 d-block d-md-none">Abrir en YouTube</small>
         </div>
+        <i class="bi bi-arrow-up-right-circle fs-4 ms-2 ms-md-3 d-none d-md-block"></i>
+        <i class="bi bi-box-arrow-up-right ms-2 d-block d-md-none"></i>
+      </a>
+    </div>
+  </div>
 
-        <!-- Información rápida -->
-        <div class="row justify-content-center mb-4">
-          <div class="col-auto">
-            <div class="d-flex align-items-center text-muted">
-              <i class="bi bi-clock me-2"></i>
-              <span>Duración: 1h 22m</span>
-            </div>
-          </div>
-          <div class="col-auto">
-            <div class="d-flex align-items-center text-muted">
-              <i class="bi bi-eye me-2"></i>
-              <span>+10,000 vistas</span>
-            </div>
-          </div>
-          <div class="col-auto">
-            <div class="d-flex align-items-center text-muted">
-              <i class="bi bi-hd me-2"></i>
-              <span>Calidad 1080p HD</span>
-            </div>
-          </div>
-        </div>
+  <!-- Información rápida -->
+  <div class="row justify-content-center mb-4">
+    <div class="col-auto">
+      <div class="d-flex align-items-center text-muted">
+        <i class="bi bi-clock me-2"></i>
+        <span>Duración: 1h 22m</span>
+      </div>
+    </div>
+    <div class="col-auto">
+      <div class="d-flex align-items-center text-muted">
+        <i class="bi bi-eye me-2"></i>
+        <span>+10,000 vistas</span>
+      </div>
+    </div>
+    <div class="col-auto">
+      <div class="d-flex align-items-center text-muted">
+        <i class="bi bi-hd me-2"></i>
+        <span>Calidad 1080p HD</span>
+      </div>
+    </div>
+  </div>
 
-        <div class="mt-4">
-          <div class="row">
-            <div class="col-md-8">
-              <h5 class="fw-bold mb-2">
-                <i class="bi bi-info-circle me-2"></i>Acerca de esta transmisión
-              </h5>
-              <p class="text-muted mb-0">
-                Live completo del Guild Prix 2026. Team de Chino durante la competencia.
-              </p>
-            </div>
-            <div class="col-md-4">
-              <div class="glassy p-3 rounded-3">
-                <div class="d-flex justify-content-between mb-2">
-                  <span class="text-muted">Formato:</span>
-                  <span class="fw-bold">Stream Grabado</span>
-                </div>
-                <div class="d-flex justify-content-between mb-2">
-                  <span class="text-muted">Disponible:</span>
-                  <span class="badge bg-success">Siempre</span>
-                </div>
-                <div class="d-flex justify-content-between">
-                  <span class="text-muted">Plataforma:</span>
-                  <span class="fw-bold text-danger">YouTube</span>
-                </div>
-              </div>
-            </div>
+  <div class="mt-4">
+    <div class="row">
+      <div class="col-md-8">
+        <h5 class="fw-bold mb-2">
+          <i class="bi bi-info-circle me-2"></i>Acerca de esta transmisión
+        </h5>
+        <p class="text-muted mb-0">
+          Live completo del Guild Prix 2026. Team de Chino durante la competencia.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <div class="glassy p-3 rounded-3">
+          <div class="d-flex justify-content-between mb-2">
+            <span class="text-muted">Formato:</span>
+            <span class="fw-bold">Stream Grabado</span>
+          </div>
+          <div class="d-flex justify-content-between mb-2">
+            <span class="text-muted">Disponible:</span>
+            <span class="badge bg-success">Siempre</span>
+          </div>
+          <div class="d-flex justify-content-between">
+            <span class="text-muted">Plataforma:</span>
+            <span class="fw-bold text-danger">YouTube</span>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
       <!-- ===================== -->
 <!-- TEMPORADA 2026 -->
 <!-- ===================== -->
