--- a/prix.html
+++ b/prix.html
@@ -138,7 +138,7 @@
                 <td class="p-0">
                   <div class="sheet-cuentas">
                     <div>Bunny</div>
-                    <div>Flancita </div>
+                    <div>Flancita</div>
                     <div>Esteban</div>
                     <div>Shordi</div>
                   </div>
@@ -169,7 +169,7 @@
                 <th class="win">2</th>
                 <th class="win">3</th>
                 <th class="win">11</th>
-                 <th class="win">2</th>
+                <th class="win">2</th>
               </tr>
               <tr class="sheet-block">
                 <th class="lose">3</th>
@@ -241,7 +241,8 @@
       <!-- ===================== -->
       <!-- 2025 (REGISTRO)       -->
       <!-- ===================== -->
-      <div class="glassy p-3 p-md-4 rounded-4">
+      <div class="glassy p-3 p-md-4 rounded-4 mb-4">
+        <!-- AÑADIDO: mb-4 -->
         <div class="d-flex align-items-center justify-content-between mb-3">
           <h1 class="h4 fw-extrabold m-0">GUILD PRIX — BUNGE — 2025</h1>
           <span class="badge text-bg-warning text-dark">𝟕𝟕𝟕</span>
@@ -385,6 +386,111 @@
               <tr class="sheet-total strong">
                 <th></th>
                 <th class="text-end" colspan="5">PUNTOS</th>
+                <th
+                  style="
+                    font-size: 1.25rem;
+                    font-weight: 800;
+                    text-align: center;
+                    color: #fff;
+                    text-shadow: 0 1px 1px rgba(255, 0, 0, 0.25);
+                  "
+                >
+                  23
+                </th>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <!-- ===================== -->
+      <!-- 2024 (CORREGIDO)      -->
+      <!-- ===================== -->
+      <div class="glassy p-3 p-md-4 rounded-4 mb-4">
+        <div class="d-flex align-items-center justify-content-between mb-3">
+          <h1 class="h4 fw-extrabold m-0">GUILD PRIX — BUNGE — 2024</h1>
+          <span class="badge text-bg-warning text-dark">𝗡𝗜𝗧𝗥𝗢</span>
+        </div>
+
+        <div class="table-responsive">
+          <!-- AÑADIDA CLASE: sheet-2cols -->
+          <table class="table sheet align-middle sheet-2cols">
+            <thead>
+              <tr class="sheet-head">
+                <th>TEAM</th>
+                <th>1</th>
+                <th>2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- PISADOR  -->
+              <tr class="sheet-subhead">
+                <th>PISADOR</th>
+                <th>Carlos</th>
+                <th>Franco</th>
+              </tr>
+
+              <!-- CUENTAS  -->
+              <tr>
+                <th>CUENTAS</th>
+                <td class="p-0">
+                  <div class="sheet-cuentas">
+                    <div>Sublimado</div>
+                    <div>Script Prince</div>
+                    <div>DonkeyRollers</div>
+                    <div>Goxha</div>
+                  </div>
+                </td>
+                <td class="p-0">
+                  <div class="sheet-cuentas">
+                    <div>zFranco</div>
+                    <div>Michel</div>
+                    <div>Monje</div>
+                    <div>SraCrisdy</div>
+                  </div>
+                </td>
+              </tr>
+
+              <!---- PRIMERA HORA ---->
+              <tr class="sheet-block">
+                <th rowspan="2">1RA HORA</th>
+                <th class="win">7</th>
+                <th class="win">6</th>
+              </tr>
+              <tr class="sheet-block">
+                <th class="lose">2</th>
+                <th class="lose">1</th>
+              </tr>
+
+              <!---- SEGUNDA HORA ---->
+              <tr class="sheet-block">
+                <th rowspan="2">2DA HORA</th>
+                <th class="win">9</th>
+                <th class="win">10</th>
+              </tr>
+              <tr class="sheet-block">
+                <th class="lose">4</th>
+                <th class="lose">2</th>
+              </tr>
+
+              <!-- SubTotal -->
+              <tr class="sheet-total">
+                <th>SubTotal</th>
+                <th></th>
+                <th></th>
+              </tr>
+
+              <!-- TOTAL  -->
+              <tr class="sheet-total strong">
+                <th></th>
+                <th class="text-end">TOTAL</th>
+                <th class="total-num"></th>
+              </tr>
+
+              <!-- PUNTOS  -->
+              <tr class="sheet-total strong">
+                <th></th>
+                <th class="text-end">PUNTOS</th>
                 <th
                   style="
                     font-size: 1.25rem;
