--- a/ranking.html
+++ b/ranking.html
@@ -1,174 +1,343 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es" data-bs-theme="dark">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DB</title>
-  <link rel="icon" href="img/favicon.ico" sizes="any">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>DB</title>
+    <link rel="icon" href="img/favicon.ico" sizes="any" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet" />
+  </head>
 
-<body class="bg-grid bg-page bg-ranking">
-  <nav class="navbar navbar-expand-lg glassy sticky-top border-bottom border-primary-subtle mt-2">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="img/perfilguild2026.gif" alt="Guild Logo"
-             style="width:32px;height:32px;border-radius:8px;object-fit:cover">
-        <span class="fw-bold">Raиkک™</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navMain">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house-door me-1"></i>Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="prix.html"><i class="bi bi-trophy me-1"></i>Prix</a></li>
-          <li class="nav-item"><a class="nav-link active" href="ranking.html"><i class="bi bi-bar-chart me-1"></i>Ranking</a></li>
-          <li class="nav-item"><a class="nav-link" href="live.html"><i class="bi bi-play-circle me-1"></i>Videos</a></li>
-        </ul>
+  <body class="bg-grid bg-page bg-ranking">
+    <nav
+      class="navbar navbar-expand-lg glassy sticky-top border-bottom border-primary-subtle mt-2"
+    >
+      <div class="container">
+        <a
+          class="navbar-brand d-flex align-items-center gap-2"
+          href="index.html"
+        >
+          <img
+            src="img/perfilguild2026.gif"
+            alt="Guild Logo"
+            style="
+              width: 32px;
+              height: 32px;
+              border-radius: 8px;
+              object-fit: cover;
+            "
+          />
+          <span class="fw-bold">Raиkک™</span>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navMain"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navMain">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html"
+                ><i class="bi bi-house-door me-1"></i>Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="prix.html"
+                ><i class="bi bi-trophy me-1"></i>Prix</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="ranking.html"
+                ><i class="bi bi-bar-chart me-1"></i>Ranking</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="live.html"
+                ><i class="bi bi-play-circle me-1"></i>Videos</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <main class="container py-5">
-
-    <!-- ===================== -->
-    <!-- 2026 (PRIMERO)        -->
-    <!-- ===================== -->
-    <section class="ranking-year" data-year="2026">
-      <div class="glassy rounded-4 p-4 mb-4 d-flex align-items-center justify-content-between">
-        <div>
-          <h1 class="h3 fw-extrabold m-0 neon">
-            <i class="bi bi-trophy me-2"></i>Ranking — Desempeño Individual — 2026
-          </h1>
+    <main class="container py-5">
+      <!-- ===================== -->
+      <!-- 2026 (PRIMERO)        -->
+      <!-- ===================== -->
+      <section class="ranking-year" data-year="2026">
+        <div
+          class="glassy rounded-4 p-4 mb-4 d-flex align-items-center justify-content-between"
+        >
+          <div>
+            <h1 class="h3 fw-extrabold m-0 neon">
+              <i class="bi bi-trophy me-2"></i>Ranking — Desempeño Individual —
+              2026
+            </h1>
+          </div>
+          <span class="badge text-bg-warning text-dark">Raиkک™</span>
         </div>
-        <span class="badge text-bg-warning text-dark">Raиkک™</span>
+
+        <section class="ranking-podium mb-4">
+          <div class="row g-3 align-items-end">
+            <div class="col-12 col-md-4 order-2 order-md-1">
+              <div class="podium-card glassy">
+                <span class="ribbon silver">2°</span>
+                <div
+                  class="medal medal-silver"
+                  aria-label="2do lugar"
+                  data-bs-toggle="tooltip"
+                  title="Subió 1 puesto"
+                >
+                  <i class="bi bi-trophy"></i>
+                </div>
+                <div class="podium-body">
+                  <div class="pos">2</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4 order-1 order-md-2">
+              <div class="podium-card glassy featured">
+                <span class="ribbon gold">1°</span>
+                <div
+                  class="medal medal-gold"
+                  aria-label="1er lugar"
+                  data-bs-toggle="tooltip"
+                  title="Se mantiene líder"
+                >
+                  <i class="bi bi-trophy-fill"></i>
+                </div>
+                <div class="podium-body">
+                  <div class="pos">1</div>
+                  <div class="name"></div>
+                  <div class="crown"><i class="bi bi-stars"></i></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4 order-3">
+              <div class="podium-card glassy">
+                <span class="ribbon bronze">3°</span>
+                <div
+                  class="medal medal-bronze"
+                  aria-label="3er lugar"
+                  data-bs-toggle="tooltip"
+                  title="Bajó 1 puesto"
+                >
+                  <i class="bi bi-trophy"></i>
+                </div>
+                <div class="podium-body">
+                  <div class="pos">3</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="glassy rounded-4 p-3 p-md-4 mb-5">
+          <h2 class="h5 mb-3">
+            <i class="bi bi-award me-2"></i>Puestos 4 al 6
+          </h2>
+          <ul class="rank-list m-0 p-0"></ul>
+        </section>
+      </section>
+
+      <!-- ===================== -->
+      <!-- 2025 (REGISTRO)       -->
+      <!-- ===================== -->
+      <section class="ranking-year" data-year="2025">
+        <div
+          class="glassy rounded-4 p-4 mb-4 d-flex align-items-center justify-content-between"
+        >
+          <div>
+            <h1 class="h3 fw-extrabold m-0 neon">
+              <i class="bi bi-trophy me-2"></i>Ranking — Desempeño Individual —
+              2025
+            </h1>
+          </div>
+          <span class="badge text-bg-warning text-dark">𝟕𝟕𝟕</span>
+        </div>
+
+        <section class="ranking-podium mb-4">
+          <div class="row g-3 align-items-end">
+            <div class="col-12 col-md-4 order-2 order-md-1">
+              <div class="podium-card glassy">
+                <span class="ribbon silver">2°</span>
+                <div
+                  class="medal medal-silver"
+                  aria-label="2do lugar"
+                  data-bs-toggle="tooltip"
+                  title="Subió 1 puesto"
+                >
+                  <i class="bi bi-trophy"></i>
+                </div>
+                <div class="podium-body">
+                  <div class="pos">2</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4 order-1 order-md-2">
+              <div class="podium-card glassy featured">
+                <span class="ribbon gold">1°</span>
+                <div
+                  class="medal medal-gold"
+                  aria-label="1er lugar"
+                  data-bs-toggle="tooltip"
+                  title="Se mantiene líder"
+                >
+                  <i class="bi bi-trophy-fill"></i>
+                </div>
+                <div class="podium-body">
+                  <div class="pos">1</div>
+                  <div class="name"></div>
+                  <div class="crown"><i class="bi bi-stars"></i></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4 order-3">
+              <div class="podium-card glassy">
+                <span class="ribbon bronze">3°</span>
+                <div
+                  class="medal medal-bronze"
+                  aria-label="3er lugar"
+                  data-bs-toggle="tooltip"
+                  title="Bajó 1 puesto"
+                >
+                  <i class="bi bi-trophy"></i>
+                </div>
+                <div class="podium-body">
+                  <div class="pos">3</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="glassy rounded-4 p-3 p-md-4 mb-5">
+          <h2 class="h5 mb-3">
+            <i class="bi bi-award me-2"></i>Puestos 4 al 6
+          </h2>
+          <ul class="rank-list m-0 p-0"></ul>
+        </section>
+      </section>
+
+            <!-- ===================== -->
+      <!-- 2024 (NITRO)          -->
+      <!-- ===================== -->
+      <section class="ranking-year" data-year="2024">
+        <div
+          class="glassy rounded-4 p-4 mb-4 d-flex align-items-center justify-content-between"
+        >
+          <div>
+            <h1 class="h3 fw-extrabold m-0 neon">
+              <i class="bi bi-trophy me-2"></i>Ranking — Desempeño Individual —
+              2024
+            </h1>
+          </div>
+          <span class="badge text-bg-warning text-dark">Nitro</span>
+        </div>
+
+        <section class="ranking-podium mb-4">
+          <div class="row g-3 align-items-end">
+            <div class="col-12 col-md-4 order-2 order-md-1">
+              <div class="podium-card glassy">
+                <span class="ribbon silver">2°</span>
+                <div
+                  class="medal medal-silver"
+                  aria-label="2do lugar"
+                  data-bs-toggle="tooltip"
+                  title="Subió 1 puesto"
+                >
+                  <i class="bi bi-trophy"></i>
+                </div>
+                <div class="podium-body">
+                  <div class="pos">2</div>
+                  <div class="name"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4 order-1 order-md-2">
+              <div class="podium-card glassy featured">
+                <span class="ribbon gold">1°</span>
+                <div
+                  class="medal medal-gold"
+                  aria-label="1er lugar"
+                  data-bs-toggle="tooltip"
+                  title="Se mantiene líder"
+                >
+                  <i class="bi bi-trophy-fill"></i>
+                </div>
+                <div class="podium-body">
+                  <div class="pos">1</div>
+                  <div class="name"></div>
+                  <div class="crown"><i class="bi bi-stars"></i></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-4 order-3">
+              <div class="podium-card glassy">
+                <span class="ribbon bronze">3°</span>
+                <div
+                  class="medal medal-bronze"
+                  aria-label="3er lugar"
+                  data-bs-toggle="tooltip"
+                  title="Bajó 1 puesto"
+                >
+                  <i class="bi bi-trophy"></i>
+                </div>
+                <div class="podium-body">
+                  <div class="pos">3</div>
+                  <div class="name">Sin registro</div>
+                  <div class="player-stats mt-2">
+                    <div class="d-flex justify-content-center gap-3">
+                      <small class="stat-badge">00% WR</small>
+                      <small class="stat-badge">00 PJ</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="glassy rounded-4 p-3 p-md-4">
+          <h2 class="h5 mb-3">
+            <i class="bi bi-award me-2"></i>Puestos 4 al 6
+          </h2>
+          <ul class="rank-list m-0 p-0">
+            <!-- Estos se llenarán automáticamente con datos o quedarán vacíos -->
+          </ul>
+        </section>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <p class="footer__copy m-0">© 2025 — Dev Yover Castillo</p>
       </div>
+    </footer>
 
-      <section class="ranking-podium mb-4">
-        <div class="row g-3 align-items-end">
-          <div class="col-12 col-md-4 order-2 order-md-1">
-            <div class="podium-card glassy">
-              <span class="ribbon silver">2°</span>
-              <div class="medal medal-silver" aria-label="2do lugar" data-bs-toggle="tooltip" title="Subió 1 puesto">
-                <i class="bi bi-trophy"></i>
-              </div>
-              <div class="podium-body">
-                <div class="pos">2</div>
-                <div class="name"></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-4 order-1 order-md-2">
-            <div class="podium-card glassy featured">
-              <span class="ribbon gold">1°</span>
-              <div class="medal medal-gold" aria-label="1er lugar" data-bs-toggle="tooltip" title="Se mantiene líder">
-                <i class="bi bi-trophy-fill"></i>
-              </div>
-              <div class="podium-body">
-                <div class="pos">1</div>
-                <div class="name"></div>
-                <div class="crown"><i class="bi bi-stars"></i></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-4 order-3">
-            <div class="podium-card glassy">
-              <span class="ribbon bronze">3°</span>
-              <div class="medal medal-bronze" aria-label="3er lugar" data-bs-toggle="tooltip" title="Bajó 1 puesto">
-                <i class="bi bi-trophy"></i>
-              </div>
-              <div class="podium-body">
-                <div class="pos">3</div>
-                <div class="name"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="glassy rounded-4 p-3 p-md-4 mb-5">
-        <h2 class="h5 mb-3"><i class="bi bi-award me-2"></i>Puestos 4 al 6</h2>
-        <ul class="rank-list m-0 p-0"></ul>
-      </section>
-    </section>
-
-    <!-- ===================== -->
-    <!-- 2025 (REGISTRO)       -->
-    <!-- ===================== -->
-    <section class="ranking-year" data-year="2025">
-      <div class="glassy rounded-4 p-4 mb-4 d-flex align-items-center justify-content-between">
-        <div>
-          <h1 class="h3 fw-extrabold m-0 neon">
-            <i class="bi bi-trophy me-2"></i>Ranking — Desempeño Individual — 2025
-          </h1>
-        </div>
-        <span class="badge text-bg-warning text-dark">𝟕𝟕𝟕</span>
-      </div>
-
-      <section class="ranking-podium mb-4">
-        <div class="row g-3 align-items-end">
-          <div class="col-12 col-md-4 order-2 order-md-1">
-            <div class="podium-card glassy">
-              <span class="ribbon silver">2°</span>
-              <div class="medal medal-silver" aria-label="2do lugar" data-bs-toggle="tooltip" title="Subió 1 puesto">
-                <i class="bi bi-trophy"></i>
-              </div>
-              <div class="podium-body">
-                <div class="pos">2</div>
-                <div class="name"></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-4 order-1 order-md-2">
-            <div class="podium-card glassy featured">
-              <span class="ribbon gold">1°</span>
-              <div class="medal medal-gold" aria-label="1er lugar" data-bs-toggle="tooltip" title="Se mantiene líder">
-                <i class="bi bi-trophy-fill"></i>
-              </div>
-              <div class="podium-body">
-                <div class="pos">1</div>
-                <div class="name"></div>
-                <div class="crown"><i class="bi bi-stars"></i></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-4 order-3">
-            <div class="podium-card glassy">
-              <span class="ribbon bronze">3°</span>
-              <div class="medal medal-bronze" aria-label="3er lugar" data-bs-toggle="tooltip" title="Bajó 1 puesto">
-                <i class="bi bi-trophy"></i>
-              </div>
-              <div class="podium-body">
-                <div class="pos">3</div>
-                <div class="name"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="glassy rounded-4 p-3 p-md-4">
-        <h2 class="h5 mb-3"><i class="bi bi-award me-2"></i>Puestos 4 al 6</h2>
-        <ul class="rank-list m-0 p-0"></ul>
-      </section>
-    </section>
-
-  </main>
-
-  <footer class="footer">
-    <div class="container">
-      <p class="footer__copy m-0">© 2025 — Dev Yover Castillo</p>
-    </div>
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script defer src="./js/ranking.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="./js/ranking.js"></script>
+  </body>
 </html>
