--- a/prix.html
+++ b/prix.html
@@ -435,10 +435,10 @@
                 <th>CUENTAS</th>
                 <td class="p-0">
                   <div class="sheet-cuentas">
+                    <div>Dios</div>
                     <div>Sublimado</div>
-                    <div>Script Prince</div>
-                    <div>DonkeyRollers</div>
-                    <div>Goxha</div>
+                    <div>GBPrincesS*</div>
+                    <div>PULSO DORADO</div>
                   </div>
                 </td>
                 <td class="p-0">
