--- a/live.html
+++ b/live.html
@@ -80,7 +80,7 @@
         <div class="d-flex align-items-center justify-content-between mb-4">
           <div>
             <h1 class="h3 fw-extrabold m-0 neon">
-              <i class="bi bi-youtube me-2 text-danger"></i>Transmisión Grabada
+              <i class="bi bi-youtube me-2 text-danger"></i>Transmisión 2026
             </h1>
           </div>
           <span class="badge bg-dark bg-opacity-50 px-3 py-2">
@@ -666,7 +666,8 @@
         <div class="d-flex align-items-center justify-content-between mb-4">
           <div>
             <h1 class="h3 fw-extrabold m-0 neon">
-              <i class="bi bi-play-btn-fill me-2"></i>Partida Destacada 2025
+              <i class="bi bi-youtube me-2 text-danger"></i>Partida Destacada
+              2025
             </h1>
             <p class="text-muted mb-0 mt-1">
               Mejor jugada — Carlos vs Top Guilds
@@ -1400,9 +1401,7 @@
             <h1 class="h3 fw-extrabold m-0 neon">
               <i class="bi bi-trophy me-2"></i>Temporada 2024 - Nitro Champions
             </h1>
-            <p class="text-muted mb-0 mt-1">
-              Campeonato destacado — Imagen
-            </p>
+            <p class="text-muted mb-0 mt-1">Campeonato destacado — Imagen</p>
           </div>
           <div>
             <span class="badge text-bg-warning text-dark me-2">Nitro</span>
