--- a/live.html
+++ b/live.html
@@ -1404,7 +1404,7 @@
             <p class="text-muted mb-0 mt-1">Campeonato destacado — Imagen</p>
           </div>
           <div>
-            <span class="badge text-bg-warning text-dark me-2">Nitro</span>
+            <span class="badge text-bg-warning text-dark me-2">𝗡𝗜𝗧𝗥𝗢</span>
             <span class="badge bg-success bg-opacity-25">Finalizado</span>
           </div>
         </div>
