--- a/ranking.html
+++ b/ranking.html
@@ -252,7 +252,7 @@
               2024
             </h1>
           </div>
-          <span class="badge text-bg-warning text-dark">Nitro</span>
+          <span class="badge text-bg-warning text-dark">𝗡𝗜𝗧𝗥𝗢</span>
         </div>
 
         <section class="ranking-podium mb-4">
